# ThreeDScene

./: CMakeLists.txt  README.md  report.md  scene.txt
include/: shader.h
include/glad/: glad.h
shaders/: screen_fragment.glsl
src/: glad.c  main.cpp  scene
src/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
